# cantina-mesh

./: .gitignore  LICENSE  README.md  trade_rules.md
community/: bounty_hunter.py
docs/: GOSSIP.md  LORE.md  MISSIONS.md  REGISTRY.md  blade_runner_badge_metadata.md  blade_runner_verification_flow.md  final_deployment_orders.md  first_open_bounties.md  intelligence_vault_entry_001.md  launch_signal.md  onboarding_telemetry.md  the_dark_channel_protocol.md
examples/: scout_template.py
proto/: cantina.proto
scripts/: bootstrap.sh  check_trn.sh
sdk/python/: README.md  pyproject.toml  tai_cantina.py
security/: VERIFICATION.md
